--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,19 +3,23 @@ requires = ["setuptools>=68.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "apache-airflow-provider-rmq"
+name = "airflow-provider-rmq"
 dynamic = ["version"]
 description = "RabbitMQ provider for Apache Airflow with hooks, operators, sensors, and deferrable trigger support."
 readme = "readme.md"
-license = {text = "Apache-2.0"}
+license = "Apache-2.0"
 requires-python = ">=3.10"
+authors = [
+    {name = "Michael Kozhin", email = "michael@kozhin.cc"},
+]
+keywords = ["airflow", "rabbitmq", "provider", "amqp", "pika", "aio-pika", "rmq"]
 classifiers = [
+    "Development Status :: 4 - Beta",
     "Environment :: Console",
     "Framework :: Apache Airflow",
     "Framework :: Apache Airflow :: Provider",
     "Operating System :: OS Independent",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
@@ -38,16 +42,20 @@ dev = [
 ]
 
 [project.entry-points."apache_airflow_provider"]
-provider_info = "apache_airflow_provider_rmq.__init__:get_provider_info"
+provider_info = "airflow_provider_rmq.__init__:get_provider_info"
 
 [project.urls]
-Source = "https://github.com/mkozhin/apache-airflow-provider-rmq"
+Homepage = "https://github.com/mkozhin/airflow-provider-rmq"
+Documentation = "https://github.com/mkozhin/airflow-provider-rmq#readme"
+Source = "https://github.com/mkozhin/airflow-provider-rmq"
+Issues = "https://github.com/mkozhin/airflow-provider-rmq/issues"
+Changelog = "https://github.com/mkozhin/airflow-provider-rmq/releases"
 
 [tool.setuptools.dynamic]
-version = { attr = "apache_airflow_provider_rmq.__version__" }
+version = { attr = "airflow_provider_rmq.__version__" }
 
 [tool.setuptools.packages.find]
-include = ["apache_airflow_provider_rmq*"]
+include = ["airflow_provider_rmq*"]
 
 [tool.ruff]
 line-length = 120
